adjusted width of main to solve wrapping issue

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -26,7 +26,7 @@ body {
 }
 
 #main {
-	width: 436px;
+	width: 560px;
 	margin: 50px 0 0 0;
 	/*margin: ;*/
 	/*width: 74%;*/
